# hostlist

./: .gitignore  CHANGES.md  Dockerfile  README.md  README.rst  buildfiles  cnamelist.py  config.py  config.yml  copy_dns_dhcp_to_server.yml  flit.ini  genansible  host.py  hostlist.py  init.sh  inventory_lib.py  output_services.py  pyproject.toml  requirements.txt  shippable.yml  tox.ini
dnsvs/: dnsvs_ssh.py  dnsvs_webapi.py  sync.py
docker/: init.sh
hostlist/: __init__.py  addhost.py  buildfiles.py  cnamelist.py  config.py  daemon.py  host.py  hostlist.py  output_services.py
hostlist/dnsvs/: __init__.py  dnsvs_webapi.py  sync.py
hostlists/: cnames  desktops-abc.yml  desktops.abc
tests/: config.yml  daemon.conf  test_groups.py  test_header.py  test_host_simple.py
tests/hostlists/: desktops-abc.yml  server.yml
