[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "hostlist"
author = "Robin Roth"
author-email = "robin.roth@kit.edu"
home-page = "https://github.com/particlekit/hostlist"
classifiers = [
    "Development Status :: 4 - Beta", "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux", 
    "Topic :: System :: Systems Administration"
]
requires = [
    "PyYAML",
    "termcolor",
    "requests",
    "cherrypy",
    "GitPython",
    "ansible-cmdb", 
    "typing"
]
requires-python = ">=3.2"
description-file = "README.md"


[tool.flit.scripts]
buildfiles = "hostlist.buildfiles:main"
addhost = "hostlist.addhost:main"
hostlist-daemon = "hostlist.daemon:main"
